# programming-2025

./: .gitignore
lab-10/: BD.txt
lab-10/part_1/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  lab10.1.csproj
lab-10/part_2/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  lab10.2.csproj
lab-3/: CMakeLists.txt  Main.qml  Rectangle.qml  main.cpp
lab-4/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab4/lab-4/: CMakeLists.txt  Main.qml  main.cpp
minigame/: CMakeLists.txt  main.cpp  puzzlewidget.cpp  puzzlewidget.h
minigamequick/: CMakeLists.txt  Main.qml  gamelogic.cpp  gamelogic.h  main.cpp
quick-test/: messageboxhelper.h
